@@ -1,2 +1,2 @@
-const char *mversion="3.9.8";
-const char *mdate = "18 January 2003";
+const char *mversion="pre-3.9.9";
+const char *mdate = "15 February 2003";
